# BidAgent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
eval/: cases.jsonl
scripts/: generate_sample_corpus.py  run_eval.py  run_ingestion.py  run_tree_ingestion.py
src/rip_agent/: config.py  db.py  telemetry.py  tokenization.py
src/rip_agent/api/: deps.py  main.py  routes.py
src/rip_agent/evaluation/: judge.py  loader.py  runner.py
src/rip_agent/generation/: context.py  llm.py  pipeline.py  prompts.py
src/rip_agent/ingestion/: chunking.py  discovery.py  embedder.py  node_store.py  parser.py  pipeline.py  store.py  tree.py  tree_pipeline.py
src/rip_agent/rag/: pipeline.py
src/rip_agent/retrieval/: _shared.py  bm25.py  (+7 more)
streamlit_app/: app.py
tests/unit/: test_api_routes.py  test_bm25.py  test_chunking.py  test_context.py  test_correctness.py  test_dense.py  test_discovery.py  test_embedder.py  test_eval_loader.py  test_eval_runner.py  test_expand.py  test_faithfulness.py  test_generation_pipeline.py  test_hit_rate.py  test_hybrid.py  test_ingest_pipeline.py  test_judge.py  test_llm.py  test_node_store.py  test_parser.py  test_prompts.py  test_rag_pipeline.py  test_retrieval_pipeline.py  test_store.py  test_tokenization.py  test_trace_route.py  test_tree.py  test_tree_bm25.py  test_tree_dense.py  test_tree_pipeline.py  test_tree_retrieval_pipeline.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  api.js  main.jsx
(+22 files in other folders)
